--- a/Expense Tracker/Base.lproj/Main.storyboard
+++ b/Expense Tracker/Base.lproj/Main.storyboard
@@ -356,14 +356,14 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Value" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="V7M-r9-MpO">
-                                            <rect key="frame" x="232" y="11" width="46" height="21"/>
+                                            <rect key="frame" x="283" y="10" width="67" height="22"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="a7C-5Z-YrJ">
-                                            <rect key="frame" x="350" y="12" width="49" height="21"/>
+                                            <rect key="frame" x="386" y="12" width="28" height="15"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <state key="normal" title="Button"/>
                                             <buttonConfiguration key="configuration" style="plain" image="trash" catalog="system">
@@ -371,14 +371,14 @@
                                             </buttonConfiguration>
                                         </button>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dHY-Ih-7TT">
-                                            <rect key="frame" x="143" y="10" width="84" height="21"/>
+                                            <rect key="frame" x="162" y="11" width="113" height="21"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1J7-HE-hpg">
-                                            <rect key="frame" x="317" y="12" width="36" height="21"/>
+                                            <rect key="frame" x="354" y="10" width="36" height="21"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <state key="normal" title="Button"/>
                                             <buttonConfiguration key="configuration" style="plain" image="highlighter" catalog="system">
@@ -407,7 +407,7 @@
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="uK6-Oj-la9">
                             <color key="tintColor" red="0.027450980390000001" green="0.47450980390000003" blue="0.56862745100000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                             <connections>
-                                <segue destination="vVf-oS-nM6" kind="popoverPresentation" popoverAnchorBarButtonItem="uK6-Oj-la9" id="aDH-DY-fFD">
+                                <segue destination="vVf-oS-nM6" kind="popoverPresentation" identifier="txnView" popoverAnchorBarButtonItem="uK6-Oj-la9" id="aDH-DY-fFD">
                                     <popoverArrowDirection key="popoverArrowDirection" up="YES" down="YES" left="YES" right="YES"/>
                                 </segue>
                             </connections>
@@ -415,6 +415,7 @@
                     </navigationItem>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
+                        <outlet property="addButton" destination="uK6-Oj-la9" id="yVa-Rc-cYZ"/>
                         <outlet property="transactionTable" destination="rqd-Ot-ZpF" id="Iq9-bJ-CfW"/>
                     </connections>
                 </tableViewController>
